Refactoring: Rework the Threads methods and Storage NonNull annotations